--- a/2-ProductFeature/2.1-MachineSpecification.md
+++ b/2-ProductFeature/2.1-MachineSpecification.md
@@ -47,4 +47,4 @@
 
  ---
 
-[← Previous Page](../2-ProductFeature/README.md)| [Next Page →](../2-ProductFeature/2.2-ControlCoreParameter.md)
+[← Previous Page](../1-ProductIntroduction\README.md)| [Next Page →](../2-ProductFeature/2.2-ControlCoreParameter.md)
