--- a/2-ProductFeature/2.3-MechanicalStructureParameter.md
+++ b/2-ProductFeature/2.3-MechanicalStructureParameter.md
@@ -1,24 +1,24 @@
 # Structural dimension parameter
 
-
-
 > ❕This chapter uses millimeters as the unit of distance and degrees as the unit of angle.
 
 ## 1 Product size and working space
+When selecting the installation position of the robot, it is essential to consider the cylindrical space directly above and below the robot, and try to avoid moving the tool into these cylindrical spaces as much as possible. This is because doing so can cause the joints to rotate too quickly when the tool moves slowly, resulting in inefficient robot operation and making risk assessment difficult.
 
-<img src="../../resources/8-FilesDownload/2-serialproduct/320work.png " width="800" height="auto" />
+<img src="../resources/2-ProductFeature/产品尺寸.png " width="400" height="auto" />
+Figure 2.3.1 Product Dimensions
 
-## 2 Mounting dimension of base
+<img src="../resources/2-ProductFeature/工作空间.png " width="800" height="auto"/> 
+Figure 2.3.2 Product Workspace
 
-* The base is mounted with flange and is compatible with both installation of LEGO and M6 screw.
+## 2 Base Mounting Dimensions
+<img src="../resources/2-ProductFeature/底座尺寸.png " width="400" height="auto" />
+Figure 2.3.3 BaseMountingDimensions
 
-<img src="../../resources/8-FilesDownload/2-serialproduct/底座尺寸.jpg " width="400" height="auto" />
+## 3 End Flange Dimensions
 
-## 3 The end of the arm
-
-- The end of the arm is compatible with both LEGO component holes and threaded holes.
-
-<img src="../../resources/8-FilesDownload/2-serialproduct/image-20220507161207116.png " width="400" height="auto" />
+<img src="../resources/2-ProductFeature/末端法兰.png" width="400" height="auto" />
+Figure 2.3.4 EndEffectorDimensions
 
 ## 4 3D model download
 Product 3D model can be provided to provide reference materials for customers.
