--- a/2-ProductFeature/2.4-ElectricalCharacteristicParameter.md
+++ b/2-ProductFeature/2.4-ElectricalCharacteristicParameter.md
@@ -1,18 +1,21 @@
 # Electrical characteristic parameter
 
 ## 1 Base Interface Overview
+<img src="../resources/2-ProductFeature/左视图.jpg " width="800" height="auto" />
 
-<img src="../../resources/8-FilesDownload/2-serialproduct/image-20220507161440080.png " width="800" height="auto" />
+Figure 2.4.1 Left side of the base
 
-Figure 1 Front view of a base
 
-<img src="../../resources/8-FilesDownload/2-serialproduct/image-20220507161500364.png " width="800" height="auto" />
+<img src="../resources/2-ProductFeature/前视图.jpg " width="800" height="auto" />
 
-Figure 2 Left side of the base
+Figure 2.4.2 Front view of a base
 
-<img src="../../resources/8-FilesDownload/2-serialproduct/image-20220507161514587.png " width="800" height="auto" />
+
+
+<img src="../resources/2-ProductFeature/右视图.jpg " width="800" height="auto" />
 
 Figure 3 Right side of the base
+
 ## 1.1 Base Interface Description
 | Number | Interface    | Definition | Function         | Remarks         |
 |:----:|:--------------:|:---------:|:-----------------:|:----------------:|
@@ -50,7 +53,7 @@ Figure 3 Right side of the base
 ## 1.2 Base IO Interface Description
 | Number | Interface    | Definition | Function         | Remarks         |
 |:----:|:--------------:|:---------:|:-----------------:|:----------------:|
-| 1    | DC/IO Interface | GND       | GND               |                  |
+| 4    | DC/IO Interface | GND       | GND               |                  |
 |      |                | IN6       | Digital input signal 1~6 | Input is in NPN mode only |
 |      |                | IN5       |                   |                  |
 |      |                | IN4       |                   |                  |
@@ -58,7 +61,7 @@ Figure 3 Right side of the base
 |      |                | IN2       |                   |                  |
 |      |                | IN1       |                   |                  |
 |      |                | 24V       | DC24V             |    DC24V input              |
-| 2   | DC/IO Interface | 24V       | DC24V             |   DC24V output               |
+| 9   | DC/IO Interface | 24V       | DC24V             |   DC24V output               |
 |      |                | OUT1      | Digital output signal 1~6 | Output is in PNP mode only |
 |      |                | OUT2      |                   |                  |
 |      |                | OUT3      |                   |                  |
@@ -71,33 +74,30 @@ Figure 3 Right side of the base
 
  Includes 6 digital input signals and 6 digital output signals, used to interact with other devices as an important part of the automation system. It should be noted that the output signal is in PNP format, and the input signal is in NPN format. The external wiring diagram is as follows:
 
-<img src="../../resources/8-FilesDownload/2-serialproduct/opt.jpg " width="800" height="auto" />
+<img src="../resources/2-ProductFeature/输出示例.png " width="800" height="auto" />
 
-<img src="../../resources/8-FilesDownload/2-serialproduct/NPN接线图.png " width="800" height="auto" />
+<img src="../resources/2-ProductFeature/输入示例.png " width="800" height="auto" />
 
 
 #### 2 DC24V Output: Internal DC24V, available for user use.
 
 ## 2 End Interface Overview
 
-<img src="../../resources/8-FilesDownload/2-serialproduct/2212-末端正面图.png " width="800" height="auto" />
+<img src="../resources/2-ProductFeature/末端侧视图.jpg " width="800" height="auto" />
 
-End effector side view
-
-<img src="../../resources/8-FilesDownload/2-serialproduct/2212-末端侧面图.png " width="800" height="auto" />
 End effector side view
 
 ## 2.1 End Interface Description
 | Number | Interface    | Definition | Function         | Remarks         |
 |:------:|:----------------:|:-----------:|:-------------------:|:------------------:|
 | 12   | M8 Aviation Socket| End Tool IO Interface |  Interact with external devices |                  |
-| 13   | Atom       | Led + Buttons | Status viewing/Drag-and-drop teaching |                  |
-| 14   |   4-pinUSB Connector  | External Interface | Connects to the camera |  |
-| 15   | Grove      |                |  Flashing Atom firmware    | For development use|
+| 13   |   4-pinUSB Connector  | External Interface | Connects to the camera |  |
+| 14   | Atom       | Led + Buttons | Status viewing/Drag-and-drop teaching |                  |
+
 
 #### 1 M8 Aviation Socket I/O Diagram: The MercuryA1 robot provides one input and two outputs.
 
-<img src="../../resources/8-FilesDownload/2-serialproduct/IO.png " width="800" height="auto" />
+<img src="../resources/2-ProductFeature/机械臂末端工具说明.png " width="800" height="auto" />
 The definitions of each tool I/O port are shown in the table below. It should be noted that both input and output signals for the tool I/O are of the PNP type, and the wiring method is the same as for the bottom output interface.
 
 | Number | Signal | Explanation          | Matching M8 Cable Color |
