--- a/4-FirstInstallAndUse/4.3-Power-onTestGuide.md
+++ b/4-FirstInstallAndUse/4.3-Power-onTestGuide.md
@@ -8,7 +8,7 @@ myCobot weights 3.5 kg. Due to the fact that the center of gravity will change a
 
 * The base fixing holes act as the interface between robot and other bases or planes. The specific hole size is shown in the figure below. There are 4 countersunk holes with a diameter of 4.5 mm, which can be fixed with M6 bolts. 
 
-<img src="../..//resources/4-FirstInstallAndUse/底座尺寸.jpg" alt="img-1" width="400" height=“auto” /> <br>
+<img src="../resources/4-FirstInstallAndUse/底座尺寸.png" alt="img-1" width="400" height=“auto” /> <br>
 
 - There is a flange installed on the end. Please make sure there are corresponding threaded holes on the fixed base before installation.
 
