更新2.1章节内容添加2.1机械结构

--- a/2-ProductFeature/2.1-MachineSpecification.md
+++ b/2-ProductFeature/2.1-MachineSpecification.md
@@ -4,46 +4,57 @@
 
 ## 1 Manipulator parameter
 
-| Index       | Parameter                |
-| :------------: | :---------------------------: |
-| Name        | Elephant Consumer Robotic Arm |
-| Model        | MercuryA1             |
-| Product Size | 98*128*640mm                       |
-| Freedom     | 7                           |
-| Working Radius | 450mm                     |
-| Efficient Load| 1kg                       |
-| Repeated Positioning Precision | ±0.05mm    |
-| Weight    | 3.5kg                       |
-| Power Input | DC24V/9.2A                     |
-| Housing Material | Carbon Fiber            |
-| Communication Interface | WIFI/CAN bus/Bluetooth <br> /USB/Serial Port |
-| Service life | 5000 hours                     |
+| Index                          | Parameter                                    |
+|:------------------------------:|:--------------------------------------------:|
+| Name                           | Elephant Consumer Robotic Arm                |
+| Model                          | MercuryA1                                    |
+| Product Size                   | 98*128*640mm                                 |
+| Freedom                        | 7                                            |
+| Working Radius                 | 450mm                                        |
+| Efficient Load                 | 1kg                                          |
+| Repeated Positioning Precision | ±0.05mm                                      |
+| Weight                         | 3.5kg                                        |
+| Power Input                    | DC24V/9.2A                                   |
+| Housing Material               | Carbon Fiber                                 |
+| Communication Interface        | WIFI/CAN bus/Bluetooth <br> /USB/Serial Port |
+| Service life                   | 5000 hours                                   |
 
-## 2 Software basic function Support
+## 2 Structural Parameter
 
-| Function/development environment| Usage situation |
-| :------------: | :--------: |
-| Free Mobile | Support |
-| Articulated Movement | Support |
-| Cartesian Movement | Support |
-| Path Recording | Support |
-| Wireless Control | Support |
-| Emergency Stop | Support |
-| Windows      | Support |
-| Linux        | Support |
-| MAC          | Support |
-| ROS 1        | Support |
-| Python       | Support |
-| C++          | Support |
-| C#           | Support |
-| JavaScript   | Support |
-| myblockly    | Support |
-| Arduino      | Support |
-| mystudio     | Support |
-| Serial Control Protocol | Support |
-| TCP/IP       | Support |
-| MODBUS       | Support |
+| joint | joint minimum value ° | joint maximum value ° | joint maximum speed (°/s) | joint maximum acceleration (°/s²) |
+|------|--------|--------|----------------|-------------------|
+| J1   | -175   | 175    | 150            | 200               |
+| J2   | -65    | 115    | 150            | 200                |
+| J3   | -175   | 175    | 150            | 200              |
+| J4   | -180   | 10     | 150            | 200               |
+| J5   | -175   | 175    | 150                | 200                  |
+| J6   | -20    | 173    | 150                | 200                  |
+| J7   | -180    | 180    | 150                | 200                  |
 
+## 3 Software basic function Support
+
+| Function/development environment | Usage situation |
+|:--------------------------------:|:---------------:|
+| Free Mobile                      | Support         |
+| Articulated Movement             | Support         |
+| Cartesian Movement               | Support         |
+| Path Recording                   | Support         |
+| Wireless Control                 | Support         |
+| Emergency Stop                   | Support         |
+| Windows                          | Support         |
+| Linux                            | Support         |
+| MAC                              | Support         |
+| ROS 1                            | Support         |
+| Python                           | Support         |
+| C++                              | Support         |
+| C#                               | Support         |
+| JavaScript                       | Support         |
+| myblockly                        | Support         |
+| Arduino                          | Support         |
+| mystudio                         | Support         |
+| Serial Control Protocol          | Support         |
+| TCP/IP                           | Support         |
+| MODBUS                           | Support         |
 
  ---
 
