--- a/2-ProductFeature/2.1-MachineSpecification.md
+++ b/2-ProductFeature/2.1-MachineSpecification.md
@@ -31,6 +31,8 @@
 | J6   | -20    | 173    | 150                | 200                  |
 | J7   | -180    | 180    | 150                | 200                  |
 
+![2](../resources/2-ProductFeature/2.png)
+
 ## 3 Software basic function Support
 
 | Function/development environment | Usage situation |
