--- a/5-BasicApplication/5.2-ApplicationUse/5.2-ApplicationUse.md
+++ b/5-BasicApplication/5.2-ApplicationUse/5.2-ApplicationUse.md
@@ -9,7 +9,7 @@ For the Mercury A1 model, we have launched software specifically designed for ro
     <br>myPanel is an application that controls the Mercury robot arm by touching the cm4 on the base of the robot arm. Its functions are coordinate control, Angle control, drag teaching, etc. which is convenient for operators to interact with elephant robots and correctly use elephant robots
     <br>
 
-- [myStudio](./5.2.2-mystudio/README.md)
+- [myStudio](./5.2.2-myStudio/README.md)
     <br>`myStudio` is a one-stop platform for using our company's robotic products. It supports users to    download/burn/update robot embedded firmware; it has embedded Blockly visual programming application to facilitate users to control robots through visual programming; it supports rapid movement control of single joints or single coordinates of robots; it supports fast control of robot IO input and output; Supports real-time monitoring of robot status and other functions. **Under development, not online yet**
 
 ----
