增加第八章内容，系统镜像下载地址待补充

--- a/8-FilesDownload/8.3-SoftwareDocumentation_zh.md
+++ b/8-FilesDownload/8.3-SoftwareDocumentation_zh.md
@@ -1,37 +1,37 @@
-# Download system software materials
+# 系统软件资料下载
 
-## Desktop application software
+## 桌面应用软件
 
 ### myStudio
 
 `myStudio` is a one-stop platform for using our company's robotic products. It supports users to    download/burn/update robot embedded firmware; it has embedded Blockly visual programming application to facilitate users to control robots through visual programming; it supports rapid movement control of single joints or single coordinates of robots; it supports fast control of robot IO input and output; Supports real-time monitoring of robot status and other functions.
 
-[Download address](https://www.elephantrobotics.com/download/)
+[下载地址](https://www.elephantrobotics.com/download/)
 
 |Version|Information|
 |---|---|
-|v1.1.0|1. Optimize myBlockly</br>2. Optimize the usage of the reset button</br>3. Add a settings interface to display joint information|
+|v1.1.0|1.优化myBlockly</br>2.优化回零按钮的用法</br>3.增加设置界面显示关节信息|
 
 ### myPanel
 
 `myPanel` is an application that controls the Mercury robot arm by touching the cm4 on the base of the robot arm. Its functions are coordinate control, Angle control, drag teaching, etc. which is convenient for operators to interact with elephant robots and correctly use elephant robots
 
-[Download address](https://www.elephantrobotics.com/download/)
+[下载地址](https://www.elephantrobotics.com/download/)
 
 |Version|Information|
 |---|---|
-|v1.0.0|Initial release|
+|v1.0.0|初次发布|
 
-## Open source projects
+## 开源项目
 
 ### pymycobot
 
-`pymycobot` is a Python library developed by Elephant Robotics, allowing users to easily and quickly perform secondary development on robots.
+`pymycobot` 是大象机器人开发的Python库，用户可以方便快捷的对机器人进行二次开发。
 
-[Source code address](https://github.com/elephantrobotics/pymycobot)
+[源码地址](https://github.com/elephantrobotics/pymycobot)
 
 ### mercury_ros
 
-`mercury_ros` is an ROS package developed by Elephant Robot based on Python, which includes ROS1 and ROS2.
+`mercury_ros` 是大象机器人基于Python开发的ROS，包含了ROS1和ROS2.
 
-[Source code address](https://github.com/elephantrobotics/mercury_ros)
+[源码地址](https://github.com/elephantrobotics/mercury_ros)
