--- a/8-FilesDownload/8.3-SoftwareDocumentation_zh.md
+++ b/8-FilesDownload/8.3-SoftwareDocumentation_zh.md
@@ -4,34 +4,34 @@
 
 ### myStudio
 
-`myStudio` is a one-stop platform for using our company's robotic products. It supports users to    download/burn/update robot embedded firmware; it has embedded Blockly visual programming application to facilitate users to control robots through visual programming; it supports rapid movement control of single joints or single coordinates of robots; it supports fast control of robot IO input and output; Supports real-time monitoring of robot status and other functions.
+`myStudio`是使用我们公司机器人产品的一站式平台。支持用户下载/烧录/更新机器人嵌入式固件；嵌入了 Blockly 可视化编程应用程序，方便用户通过可视化编程控制机器人；支持机器人单关节或单坐标的快速运动控制；支持机器人 IO 输入输出的快速控制；支持实时监控机器人状态等功能.
 
 [下载地址](https://www.elephantrobotics.com/download/)
 
-|Version|Information|
-|---|---|
-|v1.1.0|1.优化myBlockly</br>2.优化回零按钮的用法</br>3.增加设置界面显示关节信息|
+| 版本   | 信息     |
+| ------ | -------- |
+| v1.1.0 | 初次发布 |
 
 ### myPanel
 
-`myPanel` is an application that controls the Mercury robot arm by touching the cm4 on the base of the robot arm. Its functions are coordinate control, Angle control, drag teaching, etc. which is convenient for operators to interact with elephant robots and correctly use elephant robots
+`myPanel`是一个通过触摸机械臂底座上的 cm4 来控制 Mercury 机械臂的应用程序。其功能有坐标控制、角度控制、拖动示教等，便于操作人员与大象机器人水星 A1 互动.
 
 [下载地址](https://www.elephantrobotics.com/download/)
 
-|Version|Information|
-|---|---|
-|v1.0.0|初次发布|
+| 版本   | 信息     |
+| ------ | -------- |
+| v1.0.0 | 初次发布 |
 
 ## 开源项目
 
 ### pymycobot
 
-`pymycobot` 是大象机器人开发的Python库，用户可以方便快捷的对机器人进行二次开发。
+`pymycobot` 是大象机器人开发的 Python 库，用户可以方便快捷的对机器人进行二次开发。
 
 [源码地址](https://github.com/elephantrobotics/pymycobot)
 
 ### mercury_ros
 
-`mercury_ros` 是大象机器人基于Python开发的ROS，包含了ROS1和ROS2.
+`mercury_ros` 是大象机器人基于 Python 开发的 ROS，包含了 ROS1 和 ROS2.
 
 [源码地址](https://github.com/elephantrobotics/mercury_ros)
