--- a/8-FilesDownload/8.4-Systeminformation.md
+++ b/8-FilesDownload/8.4-Systeminformation.md
@@ -2,9 +2,9 @@
 
 ## Published system
 
-| Version       | Information            | Download |
-| ------------- | ---------------------- | -------- |
-| v1.0.0.240510 | Initial version system | 123      |
+| Version       | Information            | Download           |
+| ------------- | ---------------------- | ------------------ |
+| v1.0.0.240510 | Initial version system | To be supplemented |
 
 ## System image burning
 
