--- a/8-FilesDownload/8.4-Systeminformation_zh.md
+++ b/8-FilesDownload/8.4-Systeminformation_zh.md
@@ -2,28 +2,29 @@
 
 ## 已发布系统
 
-|Version|Information|Download|
-|---|---|---|
-|v1.0.0.240510|初版|123|
+| 版本          | 信息 | 下载地址 |
+| ------------- | ---- | -------- |
+| v1.0.0.240511 | 初版 | 待补充   |
 
 ## 镜像烧录
 
-### Windows烧录
+### Windows 烧录
 
 1. 选择你要烧录的系统镜像并且下载，下载之后解压。
 2. 安装[rpiboot](https://github.com/raspberrypi/usbboot/raw/master/win32/rpiboot_setup.exe)程序。
    > 注意记住安装路径，程序安装以后不会自动生成桌面快捷方式。
-3. 使用`rpiboot`程序将CM4设备变成一个电脑磁盘
+3. 使用`rpiboot`程序将 CM4 设备变成一个电脑磁盘
+
    1. 机械臂关机
-   2. 用一根可以通信的type-c数据线，一端连接电脑
-   3. 按下底座USB接口上方的按钮，**始终保持按下状态**，并且将type-c线的另一端连接底座的type-c口。
-   ![p](../resources/8-FilesDownload/3.jpg)
-   ![p](../resources/8-FilesDownload/2.jpg)
+   2. 用一根可以通信的 type-c 数据线，一端连接电脑
+   3. 按下底座 USB 接口上方的按钮，**始终保持按下状态**，并且将 type-c 线的另一端连接底座的 type-c 口。
+      ![p](../resources/8-FilesDownload/3.jpg)
+      ![p](../resources/8-FilesDownload/2.jpg)
    4. 打开机械臂电源通电
    5. 打开`rpiboot`的安装文件夹，鼠标左键双击执行`rpiboot.exe`
-   6. 观察电脑端，直到CM4变成电脑磁盘，即可松开按钮。
+   6. 观察电脑端，直到 CM4 变成电脑磁盘，即可松开按钮。
 
-4. 使用[官方SDFormatter](https://www.waveshare.net/w/upload/d/d7/Panasonic_SDFormatter.zip)格式化清理磁盘。打开 SDFormatter 软件，选中驱动器，点击选项设置，将逻辑大小调整设置为开启状态，点击 OK ，然后进行格式化操作。 不成功，继续刚刚操作，重新格式化就可以了。
+4. 使用[官方 SDFormatter](https://www.waveshare.net/w/upload/d/d7/Panasonic_SDFormatter.zip)格式化清理磁盘。打开 SDFormatter 软件，选中驱动器，点击选项设置，将逻辑大小调整设置为开启状态，点击 OK ，然后进行格式化操作。 不成功，继续刚刚操作，重新格式化就可以了。
    ![p](../resources/8-FilesDownload/4.png)
    ![p](../resources/8-FilesDownload/5.png)
 5. 使用[Raspberry Pi Imager](https://www.raspberrypi.com/software/)烧录工具，烧录解压好的系统镜像。
@@ -32,10 +33,10 @@
    ![p](../resources/8-FilesDownload/8.png)
 6. 烧录完成以后，机械臂重新开机即可
 
-### Linux烧录
+### Linux 烧录
 
 1. 选择你要烧录的系统镜像并且下载，下载之后解压。
-2. 使用源码编译 rpiboot 工具,来编译libusb开发库
+2. 使用源码编译 rpiboot 工具,来编译 libusb 开发库
    ```shell
     sudo apt install git libusb-1.0-0-dev pkg-config
     git clone --depth=1 https://github.com/raspberrypi/usbboot
@@ -43,9 +44,9 @@
     make
     # sudo ./rpiboot
    ```
-3. 用一根可以通信的type-c数据线，一端连接电脑
-4. 按下底座USB接口上方的按钮，**始终保持按下状态**，并且将type-c线的另一端连接底座的type-c口。
-5. 执行rpiboot程序
+3. 用一根可以通信的 type-c 数据线，一端连接电脑
+4. 按下底座 USB 接口上方的按钮，**始终保持按下状态**，并且将 type-c 线的另一端连接底座的 type-c 口。
+5. 执行 rpiboot 程序
    ```shell
     sudo ./rpiboot
    ```
