完善第五章内容

--- a/5-BasicApplication/5.2-ApplicationUse/5.2-ApplicationUse.md
+++ b/5-BasicApplication/5.2-ApplicationUse/5.2-ApplicationUse.md
@@ -1,16 +1,15 @@
 # 基本应用
 
-对于Mercury A1型号，我们推出了专门为机器人应用和维护设计的软件，供用户使用。其中RoboFlowLite和myStudio是用户使用机器人必备的应用层集成软件。本章将详细介绍如何使用这两个软件。
+对于Mercury A1型号，我们推出了专门为机器人应用和维护设计的软件，供用户使用。其中myPanel和myStudio是用户使用机器人必备的应用层集成软件。本章将详细介绍如何使用这两个软件。
 
-## 软件描述
+## 软件
 
 - [myPanel](./5.2.2-myPanel/README.md)
-
-<br> myppanel是一个通过触摸机械臂底部的cm4来控制Mercury机械臂的应用程序。其功能有坐标控制、角度控制、拖拽教学等，方便操作人员与大象机器人进行交互，正确使用大象机器人
-< br >
+`myPanel`是一个通过触摸机械臂底部的cm4来控制Mercury机械臂的应用程序。其功能有坐标控制、角度控制、拖拽教学等，方便操作人员与大象机器人进行交互，正确使用大象机器人
+<br>
 
 - [myStudio](./5.2.1-myStudio/README.md)
-“myStudio”是使用我们公司机器人产品的一站式平台。支持用户下载/刻录/更新机器人嵌入式固件;嵌入式block可视化编程应用，方便用户通过可视化编程控制机器人;支持机器人单关节或单坐标的快速运动控制;支持机器人IO输入输出的快速控制;支持实时监控机器人状态等功能。**开发中，尚未上线**
+`myStudio`是使用我们公司机器人产品的一站式平台。支持用户下载/刻录/更新机器人嵌入式固件;嵌入式block可视化编程应用，方便用户通过可视化编程控制机器人;支持机器人单关节或单坐标的快速运动控制;支持机器人IO输入输出的快速控制;支持实时监控机器人状态等功能。
 
 ----
 [←system](. /5.1-SystemUsageInstructions/5.1-SystemUsageInstructions.md) | [myPanel→](./5.2.2-myPanel/README.md)
