--- a/6-SDKDevelopment/6.1-Python/6.1.3-TCPIP_cn.md
+++ b/6-SDKDevelopment/6.1-Python/6.1.3-TCPIP_cn.md
@@ -17,7 +17,7 @@ python Server_A1.py
 
 ### 方法2
 
-打开`myStudio`，进入到`网络服务器`插件，开启服务端。
+打开`myStudio`，进入到[`网络服务器`](.././../5-BasicApplication/5.2-ApplicationUse/5.2.1-myStudio/5-plugins/1-socket/5.1.1-socketfirstuse.md)插件，开启服务端。
 
 ## 客户端
 
