--- a/6-SDKDevelopment/6.1-Python/6.1.3-TCPIP.md
+++ b/6-SDKDevelopment/6.1-Python/6.1.3-TCPIP.md
@@ -17,7 +17,7 @@ python Server_A1.py
 
 ### Method 2
 
-Open `myStudio`, enter the `Network Server` plug-in, and start the server.
+Open `myStudio`, enter the [`Network Server`](.././../5-BasicApplication/5.2-ApplicationUse/5.2.1-myStudio/5-plugins/1-socket/5.1.1-socketfirstuse.md) plug-in, and start the server.
 
 ## Client
 
