更新第五章系统

--- a/5-BasicApplication/5.1-SystemUsageInstructions/5.1-SystemUsageInstructions.md
+++ b/5-BasicApplication/5.1-SystemUsageInstructions/5.1-SystemUsageInstructions.md
@@ -9,9 +9,9 @@
   ![](../../resources/5-BasicApplication/5.1/5.1.1-1.png)
 
 - **Function introduction**
-  - **myStudio**：Firmware burning software for updating and burning new firmware.
+  - **myStudio**：Support users to download/burn/update robot embedded firmware; embedded block visual programming application, convenient for users to control robots through visual programming; support fast motion control of single joint or single coordinate of robot; support fast control of robot IO input and output; support Real-time monitoring of robot status and other functions.
 
-- **myBlockly**：Graphical programming software, can be directly by dragging building blocks to form running code, control the robot arm
+  - **myPanel**：myPanel is an application that controls the Mercury robotic arm by touching the cm4 of the robotic arm base. Its functions include coordinate control, angle control, drag teaching, etc.) to facilitate the operator to interact with the elephant robot
 
 - **ROS1 Shell**：Directly enter the compiled ROS1 environment, you can directly enter the corresponding instructions, run the corresponding ROS1 code
 
@@ -77,27 +77,25 @@
 
   - There are two wireless connection modes. The first mode requires an external monitor to do some operations on the system. The specific steps are as follows:： Click **“Disconnect”**，disconnect the default hotspot connection
 
-    ![](../../resources/5-BasicApplication/5.1/5.1.3-1.png)
+    ![](../../resources/5-BasicApplication/5.1/5.1.2.png)
 
     Click **"Enable Wi-Fi"** , and the currently available WiFi will appear
 
-    ![](../../resources/5-BasicApplication/5.1/5.1.3-2.png)
+    ![](../../resources/5-BasicApplication/5.1/5.1.3.png)
 
     Click on the WiFi you need to connect to, enter the password
 
-    ![](../../resources/5-BasicApplication/5.1/5.1.3-3.png)
+    ![](../../resources/5-BasicApplication/5.1/5.1.4.png)
 
     After connect successfully，click **"Connection Information"** to check IP address of the robot
 
-    ![](../../resources/5-BasicApplication/5.1/5.1.3-4.png)
+    ![](../../resources/5-BasicApplication/5.1/5.1.5.png)
 
     As shown in the example，**“192.168.10.64”** is the current IP address of the robot
 
     ![](../../resources/5-BasicApplication/5.1/5.1.3-5.png)
 
-    Connect your PC and the robot to the same WiFi，open the VNC viewer，enter the IP address（examples : input **192.168.10.64**），enter the password **Elephant**，The user name is not specified by default. The following is an example of a successful connection：
-
-    ![](../../resources/5-BasicApplication/5.1/5.1.3-6.png)
+    Connect your PC and the robot to the same WiFi，open the VNC viewer，enter the IP address（examples : input **192.168.10.64**），enter the password **Elephant**，The user name is not specified by default.
 
   - The second method doesn't need to connect the monitor, directly connect the Ubuntu system hotspot with a PC for remote control, but this connection method does not have the function of Internet surfing, and can only remotely control the robot arm system. The specific steps are as follows:
 
@@ -160,7 +158,7 @@
 
   Click **"Disconnect"** to turn off default hotspot
 
-  ![](../../resources/5-BasicApplication/5.1/5.1.5-1.png)
+  ![](../../resources/5-BasicApplication/5.1/5.1.2.png)
 
   Click **"Enable Wi-Fi"** ， wait for the currently available WiFi to be displayed
 
@@ -188,7 +186,7 @@
 
   Click **“Disconnect”**，disconnect from the default hotspot
 
-  ![](../../resources/5-BasicApplication/5.1/5.1.5-7.png)
+  ![](../../resources/5-BasicApplication/5.1/5.1.2.png)
 
 
   **How to set default IP address**
