--- a/4-FirstInstallAndUse/4.1-ProductStandardList.md
+++ b/4-FirstInstallAndUse/4.1-ProductStandardList.md
@@ -2,7 +2,7 @@
 
 ## 1 Product List Picture
 
-<img src="../../resources/4-FirstInstallAndUse/list/微信图片_20240206160327.jpg" alt="img-1" width="800" height=“auto” /> <br>
+<!-- <img src="../../resources/4-FirstInstallAndUse/list/微信图片_20240206160327.jpg" alt="img-1" width="800" height=“auto” /> <br> -->
 
 Each product is numbered and detailed to ensure you can accurately refer to your listing.
 
@@ -15,8 +15,7 @@ Each product is numbered and detailed to ensure you can accurately refer to your
 | 3 | Product kit, including USB-Type C, jumper, M6*35, cup head hexagon, fully threaded, stainless steel screws |
 | 4 | 24V, 9.2A supporting power supply |
 | 5 | Aluminum alloy base |
-| 6 | G-type clip*2 |
-| 7 | E-Stop Key |
+| 6 | E-Stop Key |
 
 **Note:** After the packaging box is in place, please confirm that the robot packaging is intact. If there is any damage, please contact the logistics company and the supplier in your region in time. After unpacking, please check the actual contents in the box according to the item list.
 
