--- a/2-ProductFeature/2.1-MachineSpecification.md
+++ b/2-ProductFeature/2.1-MachineSpecification.md
@@ -1,6 +1,6 @@
 # Product specification parameter
 
-![1](../../resources/8-FilesDownload/2-serialproduct/1.jpg)
+<!-- ![1](../../resources/8-FilesDownload/2-serialproduct/1.jpg) -->
 
 ## 1 Manipulator parameter
 
