--- a/2-ProductFeature/2.2-ControlCoreParameter.md
+++ b/2-ProductFeature/2.2-ControlCoreParameter.md
@@ -1,6 +1,6 @@
 # Control core parameter
 
-<img src="../../resources/8-FilesDownload/2-serialproduct/image.png " width="800" height="auto" />
+<!-- <img src="../../resources/8-FilesDownload/2-serialproduct/image.png " width="800" height="auto" /> -->
 
 ### 1 Master controller specification table
 
