--- a/3-UserNotes/3.2-TransportandStorage.md
+++ b/3-UserNotes/3.2-TransportandStorage.md
@@ -1,7 +1,7 @@
 # Transport and Storage
 
 
-![CheckTheBox_4](../resources/3-UserNotes/image/CheckTheBox_4.png)
+<!-- ![CheckTheBox_4](../resources/3-UserNotes/image/CheckTheBox_4.png) -->
 
 During transportation, the original packaging should be used for transporting the Mercury A1.During transportation, it should be ensured that the Mercury A1 is stable as a whole and secured through appropriate measures.
 
